--- a/index.html
+++ b/index.html
@@ -14,8 +14,83 @@
 </head>
 
 <body>
+  <!-- Loading Screen -->
+  <div id="loading-screen" style="
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    transition: opacity 0.3s ease-out;
+  ">
+    <div style="text-align: center;">
+      <img src="/university_logo.png" alt="Logo"
+        style="width: 80px; height: 80px; margin-bottom: 20px; animation: pulse 2s infinite;">
+      <h2
+        style="color: white; font-family: 'Segoe UI', Tahoma, sans-serif; font-size: 24px; margin: 0; font-weight: 600;">
+        طلاب الامن السيبراني</h2>
+      <div style="margin-top: 30px; display: flex; gap: 8px; justify-content: center;">
+        <div
+          style="width: 12px; height: 12px; background: white; border-radius: 50%; animation: bounce 1.4s infinite ease-in-out both; animation-delay: -0.32s;">
+        </div>
+        <div
+          style="width: 12px; height: 12px; background: white; border-radius: 50%; animation: bounce 1.4s infinite ease-in-out both; animation-delay: -0.16s;">
+        </div>
+        <div
+          style="width: 12px; height: 12px; background: white; border-radius: 50%; animation: bounce 1.4s infinite ease-in-out both;">
+        </div>
+      </div>
+    </div>
+    <style>
+      @keyframes pulse {
+
+        0%,
+        100% {
+          transform: scale(1);
+          opacity: 1;
+        }
+
+        50% {
+          transform: scale(1.1);
+          opacity: 0.8;
+        }
+      }
+
+      @keyframes bounce {
+
+        0%,
+        80%,
+        100% {
+          transform: scale(0);
+        }
+
+        40% {
+          transform: scale(1);
+        }
+      }
+    </style>
+  </div>
+
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+  <script>
+    // Hide loading screen when React app mounts
+    window.addEventListener('load', function() {
+      setTimeout(function() {
+        const loader = document.getElementById('loading-screen');
+        if (loader) {
+          loader.style.opacity = '0';
+          setTimeout(function() { loader.remove(); }, 300);
+        }
+      }, 500);
+    });
+  </script>
 </body>
 
 </html>
